# pluralistext

./: README.md  pyproject.toml
pluralistext/: cli.py
src/pluralistext/: logconfig.py
tests/: test_pluralistex.py  test_pluralistext.py
