[project]
name = "pluralistext"
version = "0.1.1"
description = "Platform for prototypes around Pluralistic.net data captures"
readme = "README.md"
authors = [{name = "Brian M. Dennis"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "feedparser",
    "lxml",
    "beautifulsoup4"
]

[project.urls]
Homepage = "https://github.com/crossjam/pluralistext"
Changelog = "https://github.com/crossjam/pluralistext/releases"
Issues = "https://github.com/crossjam/pluralistext/issues"
CI = "https://github.com/crossjam/pluralistext/actions"

[project.entry-points.console_scripts]
pluralistext = "pluralistext.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
